# axtix-web

./: .env  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: post.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250204_072037_create_user_table.rs
src/: app.rs  main.rs
src/app/: routes.rs
src/models/: mod.rs  my_obj.rs  notice.rs
src/routes/: auth_routes.rs  home.rs  home_handler.rs  home_routes.rs  mod.rs  obj.rs  user_routes.rs
src/routes/handlers/: auth_handler.rs  home_handler.rs  mod.rs  user_handler.rs
src/routes/middlewares/: auth_middleware.rs
src/utils/: api_response.rs  constants.rs  jwt.rs
