[package]
name = "rest"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
# db
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
migration = { path = "migration" }
entity = { path = "entity" }
# jwt
sha256 = "1.5.0"
chrono = "0.4.39"
jsonwebtoken = "9.3.0"
actix-web-lab = "0.23.0"
# env
dotenv = "0.15.0"
# log
env_logger = "0.11.6"
log = "0.4.25"
# error